# cpScript

./: .gitignore  AsmDoc.txt  BUGS.txt  BuildInstructions.txt  FormerSvnLog.txt  ObjectBasicDoc.txt  README  README.md  TODO.txt  cpScript.sln
C/: CMakeLists.txt  Makefile  Makefile.win
C/LightCHeaders/: FileIO.lch  Math.lch
C/ObjectBasicHeaders/: ConsoleIO.obh  FileIO.obh  Math.obh  Utilities.obh
C/include/: CpStdLib_Utilities.h  Extensions.h  List.h  ObjBas_ClassDef.h  ObjBas_Evaluator.h  ObjBas_Function.h  ObjBas_Token.h  Stack.h  Token.h  libCpScript.Asm.h  libCpScript.ObjectBasic.h  utarray.h
C/include/asm/: AssemblyToken.h  MemoryBlockHeader.h
C/include/shared/: Extensions.h  List.h
C/include/std/: CpStdLib.h  CpStdLib_FileIO.h
C/src/: AssemblyToken.c  CpConsole.c  CpInt.c  CpObjCmp.c  CpStdLib.c  CpStdLib_ConsoleIO.c  CpStdLib_FileIO.c  CpStdLib_Math.c  CpStdLib_Utilities.c  ExecRuntime.c  Extensions.c  List.c  MakeExec.c  MemoryBlockSetHeader.c  ObjBas_BlockBuilder.c  ObjBas_ClassDef.c  ObjBas_Evaluator.c  ObjBas_Function.c  ObjBas_Script.c  ObjBas_Token.c  Parser.c  Stack.c  State.c  State2.c  test.c
C/src/asm/: LabelDef.c  MemoryBlockHeader.c  MemoryBlockSetHeader.c  Parser.c  State.c
C/src/cpconsole/: CpConsole.c
C/src/cpint/: CpInt.c
C/src/execruntime/: ExecRuntime.c
C/src/makeexec/: MakeExec.c
C/src/shared/: Extensions.c  List.c
C/src/std/: CpStdLib.c
CSharp/: cpScript.sln
CSharp/cpConsole/: AssemblyInfo.cs  Main.cs  cpConsole.csproj
CSharp/cpObjCmp/: Program.cs  cpObjCmp.csproj
CSharp/cpScriptTest.Net/: AssemblyInfo.cs  Main.cs  cpScriptTest.Net.csproj
CSharp/libCpScript.Net.Asm/: AssemblyInfo.cs  Directory.Build.props  NativeState.cs  State.cs  libCpScript.Net.Asm.csproj
CSharp/libCpScript.Net.ObjectBasic/: AssemblyInfo.cs  BlockBuilder.cs  ClassDef.cs  Evaluator.cs  Extensions.cs  Function.cs  NativeScript.cs  ObjectBasicScript.cs  Script.cs  Token.cs  libCpScript.Net.ObjectBasic.csproj
CSharp/libCpScript.Net.StdLib/: AssemblyInfo.cs  CpStdLib.cs  libCpScript.Net.StdLib.csproj
Docs/: AsmDoc.txt  BuildInstructions.txt  CAPI.txt  CSharpAPI.txt  ObjectBasicDoc.txt
LightCProto/: LightCProto.sln
LightCProto/LightCProto/: LightCParser.cs  LightCProto.csproj  Program.cs  Token.cs  Utilities.cs
NewRuntimeProto/: NewRuntimeProto.sln
NewRuntimeProto/NewRuntimeProto/: ExecutionExceptionEventArgs.cs  ExternalMethodEventArgs.cs  MemoryBlock.cs  NewRuntimeProto.csproj  Program.cs  State.cs  Utilities.cs
cpConsole/: AssemblyInfo.cs  Main.cs  cpConsole.csproj
cpInt/: Program.cs  cpInt.csproj
cpInt/Properties/: AssemblyInfo.cs
cpObjCmp/: Program.cs  cpObjCmp.csproj
cpObjCmp/Properties/: AssemblyInfo.cs
cpScriptTest.Net/: AssemblyInfo.cs  Main.cs  cpScriptTest.Net.csproj
libCpScript.Asm/: BuildWindows.bat  Glue.cs  Makefile  Makefile.win  cpInt.cbp  cpScriptAsm.workspace  cpScriptTest.cbp  libCpScript.Asm.Shared.cbp  libCpScript.Asm.Shared.sln  libCpScript.Asm.Shared.vcxproj  libCpScript.Asm.Shared.vcxproj.filters  libCpScript.Asm.cbp  libCpScript.Asm.sln  libCpStdLib.Shared.cbp  libCpStdLib.Shared.vcxproj  libCpStdLib.Shared.vcxproj.filters  libCpStdLib.cbp
libCpScript.Asm/ObjectBasicHeaders/: FileIO.obh  Utilities.obh
libCpScript.Asm/include/: AssemblyToken.h  CpStdLib.h  CpStdLib_ConsoleIO.h  CpStdLib_FileIO.h  CpStdLib_Math.h  CpStdLib_Utilities.h  Extensions.h  IScriptLib.h  LabelDef.h  List.h  MemoryBlock.h  MemoryBlockHeader.h  MemoryBlockSetHeader.h  Parser.h  Stack.h  Token.h  libCpScript.Asm.h
libCpScript.Asm/src/: AssemblyToken.c  CpInt.c  CpStdLib.c  CpStdLib_ConsoleIO.c  CpStdLib_FileIO.c  CpStdLib_Math.c  CpStdLib_Utilities.c  Extensions.c  IScriptLib.c  LabelDef.c  List.c  MemoryBlock.c  MemoryBlockHeader.c  MemoryBlockSetHeader.c  Parser.c  Stack.c  State.c  test.c
libCpScript.Net.Asm/: AssemblyInfo.cs  Extensions.cs  IScriptLib.cs  LabelDef.cs  MemoryBlock.cs  NativeState.cs  Parser.cs  State.cs  Token.cs  libCpScript.Net.Asm.csproj
libCpScript.Net.ObjectBasic/: AssemblyInfo.cs  BlockBuilder.cs  ClassDef.cs  Evaluator.cs  Extensions.cs  Function.cs  ObjectBasicScript.cs  Token.cs  libCpScript.Net.ObjectBasic.csproj
libCpScript.Net.ObjectBasic.StdLib.ConsoleIO/: ConsoleIO.obh  ObjectBasicLib.cs
libCpScript.Net.ObjectBasic.StdLib.FileIO/: FileIO.obh  ObjectBasicLib.cs
libCpScript.Net.ObjectBasic.StdLib.FileIO/Properties/: AssemblyInfo.cs
libCpScript.Net.ObjectBasic.StdLib.Math/: Math.obh  ObjectBasicLib.cs  libCpScript.Net.ObjectBasic.StdLib.Math.csproj
libCpScript.Net.StdLib/: AssemblyInfo.cs  CpStdLib.cs  libCpScript.Net.StdLib.csproj
libCpScript.Net.StdLib.ConsoleIO/: ObjectBasicLib.cs  libCpScript.Net.StdLib.ConsoleIO.csproj
libCpScript.Net.StdLib.FileIO/: ObjectBasicLib.cs  libCpScript.Net.StdLib.FileIO.csproj
libCpScript.Net.StdLib.Math/: ObjectBasicLib.cs  libCpScript.Net.StdLib.Math.csproj
libCpScript.Net.StdLib.Utilities/: AssemblyInfo.cs  ObjectBasicLib.cs  Utilities.obh  libCpScript.Net.StdLib.Utilities.csproj
(+8 files in other folders)
